@@ -9613,9 +9613,10 @@ save_auth_info(
 
 #if defined(HAVE_GSSAPI) && defined(HAVE_KRB5_H)
 #  ifdef HAVE_KRB5_IPC_CLIENT_SET_TARGET_UID
-  if (con->http.hostaddr->addr.sa_family == AF_LOCAL || con->gss_creds)
+  if (con->have_gss &&
+      (con->http.hostaddr->addr.sa_family == AF_LOCAL || con->gss_creds))
 #  else
-  if (con->gss_creds)
+  if (con->have_gss && con->gss_creds)
 #  endif /* HAVE_KRB5_IPC_CLIENT_SET_TARGET_UID */
     save_krb5_creds(con, job);
   else if (job->ccname)
