@@ -3,6 +3,8 @@ CHANGES.txt - 2009-05-26
 
 CHANGES IN CUPS V1.4rc1
 
+	- The scheduler incorrectly always tried to copy Kerberos credentials
+	  for print jobs.
 	- Updated the Spanish localization (STR #3204)
 	- The scheduler crashed when getting the default paper size from
 	  libpaper (STR #3205, STR #3206)
